Fix some layout issues

--- a/src/workspace/workspace.scss
+++ b/src/workspace/workspace.scss
@@ -29,12 +29,13 @@
   .active-tab {
     margin-top: 34px;
     height: calc(100% - 34px);
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     .current-workspace {
       background-color: #e8e8e8e8;
       height: 38px;
       display: flex;
-      text-align: 'center';
+      text-align: center;
       .name {
         flex-grow: 1;
         padding: 0 10px;
@@ -50,6 +51,7 @@
           &:hover { background-color: #f5f5f5; }
           &:focus { background-color: #fff; }
           &:focus + .icon-confirm { pointer-events: all; opacity: 1; }
+          font-weight: bold;
         }
         .icon-confirm {
           position: absolute;
@@ -64,8 +66,9 @@
         line-height: 30px;
         display: flex;
         .name {
-          padding-left: 10px;
+          padding-left: 24px;
           flex-grow: 1;
+          font-size: small;
         }
       }
     }
@@ -92,7 +95,8 @@
   .saved-tab {
     margin-top: 34px;
     height: calc(100% - 34px);
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     .load-workspace {
       cursor: pointer;
       line-height: 34px;
